<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.diet2.ui.home.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_dashboard"
            app:destination="@id/dashboardFragment" />
        <action
            android:id="@+id/action_home_to_notifications"
            app:destination="@id/notificationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.diet2.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.diet2.ui.notifications.NotificationsFragment"
        android:label="@string/nav_notifications" />

</navigation>
